[gd_scene load_steps=2 format=3 uid="uid://de0enwhy7ubn5"]

[ext_resource type="Script" uid="uid://ck41v0wctsskt" path="res://source/UI/game_over_scene/game_over_manager.gd" id="1_kquh6"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_kquh6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Mini Game Over!"
horizontal_alignment = 1

[node name="TryAgain" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Try Again"

[node name="Skip" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Skip Mini Game"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Go to Main Menu"

[connection signal="button_up" from="VBoxContainer/TryAgain" to="." method="_on_try_again_button_up"]
[connection signal="button_up" from="VBoxContainer/Skip" to="." method="_on_skip_button_up"]
[connection signal="button_up" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_button_up"]
